# homelab

./: .gitignore  AGENTS.md  CLAUDE.md  GITOPS_SETUP.md  NETWORKING.md  ONBOARDING_GUIDE.md  README.md  RENOVATE.md  TODO.md  opencode.json  renovate.json  shared-downloads-pv.yaml  shared-downloads-storage-class.yaml  validate-migration.sh
.github/: copilot-instructions.md  renovate.json
.github/workflows/: build-wol-proxy.yml  cluster-backup.yml  coding-tools-mcp.yaml  deploy-gitops.yml  deploy_gitops.yaml  deploy_gitops_home.yaml  deploy_infrastructure.yaml  destroy_infrastructure.yaml  k3s-cluster-setup.yml  (+1 more)
.opencode/: settings.local.json
agents/coding-tools-mcp/: Dockerfile  pyproject.toml  server.py
agents/coding-tools-mcp/skills/: code-review.md  pr-workflow.md  task-decomposition.md
agents/coding-tools-mcp/tools/: __init__.py  files.py  search.py  terminal.py  web.py
ansible/: ansible.cfg  inventory.yml
apps/: root-home.yaml  root.yaml
infrastructure/: backend.tf  kube.tf
networking/: README.md  kustomization.yaml
networking-home/: README.md  kustomization.yaml
plans/: agents.md  desktop-milestone-1-scheduling-fixes.md  desktop-milestone-2-ansible-provisioning.md  desktop-milestone-3-wol-proxy-extension.md  desktop-milestone-4-app-migration.md  desktop-node-integration.md  gpu-desktop-integration.md  mac-mini-ollama.md  storage-class-rename.md
scripts/: backup-databases.sh  bike-weather-preview.sh  restore-homelab.sh  seed-keyvault-secrets-bike-weather.sh  setup_authentik_homelab.py  update-k3s-cluster.sh  update-nodes.sh
(+598 files in other folders)
