[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-tools-mcp"
version = "0.1.0"
description = "MCP tool server providing file, git, shell, and web tools for coding agents"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
coding-tools-mcp = "server:main"
